Fix layout on firefox
Firefox was stretching snippets vertically into infinity for some reason.

--- a/common.css
+++ b/common.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #242424;
+  background-color: #202020;
   color: white;
 }
 
@@ -18,6 +18,7 @@ table {
 
 form {
   margin: 0;
+  margin-top: 1em;
 }
 
 hr {
@@ -123,7 +124,7 @@ td.dropdown-container {
   margin: 1em;
   margin-top: 3em;
   padding: 0;
-  padding-top: 2em;
+  padding-top: 1em;
   background-color: #383838;
   box-shadow: 0 1px 4px #000;
 }
@@ -139,7 +140,7 @@ td.dropdown-container {
 
 .footer {
   grid-area: footer;
-  background-color: #242424;
+  background-color: #202020;
   color: #666;
   font-style: italic;
 
