--- a/pages/index/index.css
+++ b/pages/index/index.css
@@ -7,6 +7,7 @@
   font-style: italic;
   color: #888;
   padding: 1.5em !important;
+  height: 4em;
 }
 
 .snippet-language {
@@ -32,13 +33,19 @@
   color: #888;
 }
 
+p.snippet-title {
+  padding: 2em;
+  padding-top: 0;
+}
+
 .snippet-content {
   margin: 0 2em 1em 2em;
-  height: Calc(100% - 9.3em);
+  /* height: Calc(100% - 10.3em); */
+  height: 15em;
 }
 
 .ace_editor {
-  min-height: 100% !important;
+  height: 100% !important;
 }
 
 #snippet_search {
