--- a/pages/my_snippets/my_snippets.css
+++ b/pages/my_snippets/my_snippets.css
@@ -7,6 +7,7 @@
   font-style: italic;
   color: #888;
   padding: 1.5em !important;
+  height: 4em;
 }
 
 .snippet-language {
@@ -32,9 +33,13 @@
   color: #888;
 }
 
+p.snippet-title {
+  padding: 2em;
+}
+
 .snippet-content {
   margin: 0 2em 1em 2em;
-  height: Calc(100% - 9.3em);
+  height: Calc(100% - 10.3em);
 }
 
 .ace_editor {
